[gd_scene load_steps=2 format=3 uid="uid://chn2r3jf20rqa"]

[ext_resource type="Script" uid="uid://yri12f6wdmih" path="res://Scripts/ui.gd" id="1_jxero"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jxero")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 575.0
offset_bottom = 315.0

[node name="Panel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -20.5
offset_right = 71.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false

[node name="Label" type="Label" parent="HUD/Panel"]
layout_mode = 0
offset_left = 6.5
offset_top = 13.5
offset_right = 136.5
offset_bottom = 36.5
text = "Press 'Space' key"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/separation = 5

[node name="HighScoreLabel" type="Label" parent="HUD/ScoreContainer"]
layout_mode = 2
text = "HighScore:"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="HUD/ScoreContainer"]
layout_mode = 2
text = "Score:"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="HUD"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.5
offset_top = -157.5
offset_right = 287.5
offset_bottom = 157.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Score:"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "HighScore:"
horizontal_alignment = 1

[node name="Button" type="Button" parent="GameOverPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[connection signal="timeout" from="HUD/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOverPanel/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
